--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "^43.0.0",
+    "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.2",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
