--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "email-validator": "^2.0.4",
     "expo": "^43.0.0",
     "formik": "^2.2.9",
     "react": "17.0.1",
@@ -13,6 +14,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
+    "valid-url": "^1.0.9",
     "yup": "^0.32.11"
   },
   "devDependencies": {
