--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "email-validator": "^2.0.4",
     "expo": "^43.0.0",
+    "firebase": "^9.4.0",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
