--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "@react-navigation/native-stack": "^6.2.5",
     "email-validator": "^2.0.4",
     "expo": "^43.0.0",
-    "firebase": "^9.4.0",
+    "firebase": "8.2.3",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "^0.66.2",
+    "react-native": "^0.66.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "3.3.2",
